image circle fixed and other changes

--- a/views/content/cart.html
+++ b/views/content/cart.html
@@ -23,8 +23,8 @@
             <tr class="text-center letter-space font-semibold" ng-repeat="product in cart">
               <td>
                 <figure>
-                  <div class="cart-imgholder m-center round">
-                  <img ng-src="{{product.img}}" class="img-responsive">
+                  <div class="cart-imgholder m-center">
+                  <img ng-src="{{product.img}}" class="img-responsive round">
                   </div>
                   <figcaption class="text-center text-uppercase">{{product.name}}</figcaption>
                 </figure>
