--- a/views/content/healthmanagement.html
+++ b/views/content/healthmanagement.html
@@ -17,8 +17,8 @@
           <div class="managecat text-center">
             <figure>
               <a href="#/healthmanagementdetail">
-                <div class="category-imghold  round">
-                  <img src="img/health/ailment.png" alt="" class="img-responsive">
+                <div class="category-imghold ">
+                  <img src="img/health/ailment.png" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark font-semibold">Weight loss for kids</figcaption>
               </a>
@@ -29,8 +29,8 @@
           <div class="managecat text-center">
             <figure>
               <a href="#/healthmanagementdetail">
-                <div class="category-imghold round">
-                  <img src="img/health/ageing.png" alt="" class="img-responsive">
+                <div class="category-imghold">
+                  <img src="img/health/ageing.png" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark text-bold">Weightloss with healthgain</figcaption>
               </a>
@@ -41,8 +41,8 @@
           <div class="managecat text-center">
             <figure>
               <a href="#/healthmanagementdetail">
-                <div class="category-imghold round">
-                  <img src="img/health/lactation.png" alt="" class="img-responsive">
+                <div class="category-imghold">
+                  <img src="img/health/lactation.png" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark text-bold">Post pregnancy weight loss with lactation</figcaption>
               </a>
@@ -53,8 +53,8 @@
           <div class="managecat text-center">
             <figure>
               <a href="#/healthmanagementdetail">
-                <div class="category-imghold round">
-                  <img src="img/health/senior.png" alt="" class="img-responsive">
+                <div class="category-imghold">
+                  <img src="img/health/senior.png" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark text-bold">weightloss with PCOS and Insulin Resistence</figcaption>
               </a>
@@ -65,8 +65,8 @@
           <div class="managecat text-center">
             <figure>
               <a href="#/healthmanagementdetail">
-                <div class="category-imghold round">
-                  <img src="img/health/kids.png" alt="" class="img-responsive">
+                <div class="category-imghold">
+                  <img src="img/health/kids.png" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark text-bold">Healthy aging (looking for anti aging)</figcaption>
               </a>
@@ -79,8 +79,8 @@
           <div class="managecat text-center">
             <figure>
               <a href="#/healthmanagementdetail">
-                <div class="category-imghold round">
-                  <img src="img/health/pregnancy.png" alt="" class="img-responsive">
+                <div class="category-imghold">
+                  <img src="img/health/pregnancy.png" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark text-bold">pregnancy</figcaption>
               </a>
@@ -91,8 +91,8 @@
           <div class="managecat text-center">
             <figure>
               <a href="#/healthmanagementdetail">
-                <div class="category-imghold round">
-                  <img src="img/health/weight-gain.png" alt="" class="img-responsive">
+                <div class="category-imghold">
+                  <img src="img/health/weight-gain.png" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark text-bold">weight gain</figcaption>
               </a>
@@ -103,8 +103,8 @@
           <div class="managecat text-center">
             <figure>
               <a href="#/healthmanagementdetail">
-                <div class="category-imghold round">
-                  <img src="img/health/loss.png" alt="" class="img-responsive">
+                <div class="category-imghold">
+                  <img src="img/health/loss.png" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark text-bold">ailment control</figcaption>
               </a>
@@ -115,8 +115,8 @@
           <div class="managecat text-center">
             <figure>
               <a href="#/healthmanagementdetail">
-                <div class="category-imghold round">
-                  <img src="img/health/suclpting.png" alt="" class="img-responsive">
+                <div class="category-imghold">
+                  <img src="img/health/suclpting.png" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark text-bold">Cancer support</figcaption>
               </a>
@@ -127,8 +127,8 @@
           <div class="managecat text-center">
             <figure>
               <a href="#/healthmanagementdetail">
-                <div class="category-imghold round">
-                  <img src="img/health/cancer.png" alt="" class="img-responsive">
+                <div class="category-imghold">
+                  <img src="img/health/cancer.png" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark text-bold">Marathon / Sports Nutrition</figcaption>
               </a>
