--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -1,6 +1,6 @@
 <section>
   <div class="selfcare-image">
-    <img src="img/apple.jpg" alt="">
+    <img src="img/banners/contactus.jpg" alt="">
     <h2 class="text-uppercase get-center white font-gotham-bold contact-title">Contact Us</h2>
   </div>
 
