--- a/views/content/meet.html
+++ b/views/content/meet.html
@@ -1,6 +1,6 @@
 <div class="meet">
   <div class="banner selfcare-image">
-    <img src="img/apple.jpg" alt="">
+        <img src="img/banners/meetsuman.jpg" alt="">
     <div class="get-center">
       <h2 class="text-uppercase letter-space white font-semibold">meet suman agarwal</h2>
     </div>
