--- a/views/content/weightmanagement.html
+++ b/views/content/weightmanagement.html
@@ -1,6 +1,6 @@
 <div class="weight">
   <div class="banner selfcare-image">
-    <img src="img/apple.jpg" alt="">
+      <img src="img/banners/weight-management.jpg" alt="">
     <div class="get-center">
       <h2 class="text-uppercase letter-space white font-semibold">Weight loss</h2>
     </div>
