--- a/views/content/coolsculpting.html
+++ b/views/content/coolsculpting.html
@@ -1,6 +1,6 @@
 <section>
   <div class="selfcare-image">
-    <img src="img/apple.jpg" alt="">
+    <img src="img/banners/coolsculpting.jpg" alt="">
     <h2 class="text-uppercase get-center white font-semibold">Cool Sculpting</h2>
   </div>
 
