--- a/views/content/faq.html
+++ b/views/content/faq.html
@@ -1,6 +1,6 @@
 <div class="faq">
   <div class="banner selfcare-image">
-    <img src="img/apple.jpg" alt="">
+    <img src="img/banners/faq.jpg" alt="">
     <div class="get-center">
       <h2 class="text-uppercase letter-space white font-semibold">frequently asked questions</h2>
     </div>
