--- a/views/content/healthpackages.html
+++ b/views/content/healthpackages.html
@@ -1,6 +1,6 @@
 <section>
   <div class="selfcare-image">
-    <img src="img/apple.jpg" alt="">
+        <img src="img/banners/healthpackages.jpg" alt="">
     <h2 class="text-uppercase get-center white font-semibold">Health Packages</h2>
   </div>
 
