--- a/views/content/imageconsulting.html
+++ b/views/content/imageconsulting.html
@@ -1,6 +1,6 @@
 <section>
   <div class="selfcare-image">
-    <img src="img/apple.jpg" alt="">
+    <img src="img/banners/image-consulting.jpg" alt="">
     <h2 class="text-uppercase get-center white font-semibold">Image Consulting</h2>
   </div>
 
