--- a/views/content/team.html
+++ b/views/content/team.html
@@ -1,6 +1,6 @@
 <section>
   <div class="selfcare-image text-center">
-    <img src="img/apple.jpg" alt="">
+    <img src="img/banners/team.jpg" alt="">
     <h2 class="text-uppercase get-center white font-semibold">The Selfcare Team</h2>
   </div>
   <div class="container" ng-init="teamone=true;teamtwo=false">
