--- a/views/footer.html
+++ b/views/footer.html
@@ -11,7 +11,6 @@
                         <li><a href="#successstories" title="Success Stories">Success Stories</a></li>
                         <li><a href="#/news" title="News">News</a></li>
                         <li><a href="" title="Blog">Blog</a></li>
-                        <li><a href="" title="Careers">Careers</a></li>
                         <li><a href="#contactus" title="Contact">Contact</a></li>
                     </ul>
                 </div>
@@ -89,7 +88,7 @@
                     </div>
                     <div class="copyright brand-brown-dark letter-space">
                        <p>Copyright &copy; Selfcare Support Pvt. Ltd.</p>
-                       <p>All Rights Reserved | <a href="" class="brand-brown-dark">Privacy Policy</a> | T&amp;C</p>
+                       <p>All Rights Reserved | <a href="#/privacypolicy" class="brand-brown-dark">Privacy Policy</a> | <a href="#/termsandcondition">T&amp;C</a></p>
                     </div>
                 </div>
             </div>
