--- a/views/footermenu.html
+++ b/views/footermenu.html
@@ -2,12 +2,12 @@
   <div class="row-flex">
     <div class="col-flex">
       <div class="health-back package relate">
-        <button class="btn get-center text-uppercase foot-btn font-gotham-bold" type="button">health packages</button>
+        <a href="#/healthpackages"><button class="btn get-center text-uppercase foot-btn font-gotham-bold" type="button">health packages</button></a>
       </div>
     </div>
     <div class="col-flex">
       <div class="health-back shop relate">
-        <button class="btn get-center text-uppercase foot-btn font-gotham-bold" type="button">health shop</button>
+        <a href="#/healthproducts/1"><button class="btn get-center text-uppercase foot-btn font-gotham-bold" type="button">health shop</button></a>
       </div>
     </div>
   </div>
