--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -1,6 +1,6 @@
 <section>
   <div class="selfcare-image">
-    <img src="img/apple.jpg" alt="">
+    <img src="img/banners/aboutus.jpg" alt="">
     <h2 class="text-uppercase get-center white font-semibold">About Selfcare</h2>
   </div>
 
@@ -23,6 +23,9 @@
               <!-- <iframe width="100%" height="300" src="https://www.youtube.com/embed/nSQJuONAvaw" frameborder="0" allowfullscreen></iframe> -->
               <a class="various fancybox.iframe" fancybox href="https://www.youtube.com/embed/nSQJuONAvaw?autoplay=1">
                 <img src="img/videos/suman.jpg" alt="" class="img-responsive" />
+                <div class="circle">
+                  <img src="img/play.png" alt="" class="img-responsive" />
+                </div>
               </a>
             </div>
           </div>
