--- a/views/content/healthmanagement.html
+++ b/views/content/healthmanagement.html
@@ -1,6 +1,6 @@
 <div class="health-management">
   <div class="banner selfcare-image">
-    <img src="img/apple.jpg" alt="">
+    <img src="img/banners/healthmanagement.jpg" alt="">
     <div class="get-center">
       <h2 class="text-uppercase letter-space white font-semibold">health management</h2>
     </div>
@@ -16,9 +16,9 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="#/healthmanagementdetail">
+              <a href="#/weightlossforkids">
                 <div class="category-imghold ">
-                  <img src="img/health/ailment.png" alt="" class="img-responsive round">
+                  <img src="img/health/kids.png" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark font-semibold">Weight loss for kids</figcaption>
               </a>
@@ -28,11 +28,11 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="#/healthmanagementdetail">
+              <a href="#/weightlosswithhealthgain">
                 <div class="category-imghold">
-                  <img src="img/health/ageing.png" alt="" class="img-responsive round">
+                  <img src="img/health/weightloss.png" alt="" class="img-responsive round">
                 </div>
-                <figcaption class="text-uppercase brand-brown-dark text-bold">Weightloss with healthgain</figcaption>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">Weightloss with health gain</figcaption>
               </a>
             </figure>
           </div>
@@ -40,7 +40,7 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="#/healthmanagementdetail">
+              <a href="#/postpregnancy">
                 <div class="category-imghold">
                   <img src="img/health/lactation.png" alt="" class="img-responsive round">
                 </div>
@@ -52,9 +52,9 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="#/healthmanagementdetail">
+              <a href="#/weightlosswithpcos">
                 <div class="category-imghold">
-                  <img src="img/health/senior.png" alt="" class="img-responsive round">
+                  <img src="img/health/weight-loss-pcos.png" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark text-bold">weightloss with PCOS and Insulin Resistence</figcaption>
               </a>
@@ -64,11 +64,11 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="#/healthmanagementdetail">
+              <a href="#/healthyaging">
                 <div class="category-imghold">
-                  <img src="img/health/kids.png" alt="" class="img-responsive round">
+                  <img src="img/health/ageing.png" alt="" class="img-responsive round">
                 </div>
-                <figcaption class="text-uppercase brand-brown-dark text-bold">Healthy aging (looking for anti aging)</figcaption>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">Healthy aging</figcaption>
               </a>
             </figure>
           </div>
@@ -78,7 +78,7 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="#/healthmanagementdetail">
+              <a href="#/pregnancy">
                 <div class="category-imghold">
                   <img src="img/health/pregnancy.png" alt="" class="img-responsive round">
                 </div>
@@ -90,7 +90,7 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="#/healthmanagementdetail">
+              <a href="#/weightgain">
                 <div class="category-imghold">
                   <img src="img/health/weight-gain.png" alt="" class="img-responsive round">
                 </div>
@@ -102,9 +102,9 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="#/healthmanagementdetail">
+              <a href="#/ailmentcontrol">
                 <div class="category-imghold">
-                  <img src="img/health/loss.png" alt="" class="img-responsive round">
+                  <img src="img/health/ailment-control.png" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark text-bold">ailment control</figcaption>
               </a>
@@ -114,9 +114,9 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="#/healthmanagementdetail">
+              <a href="#/cancersupport">
                 <div class="category-imghold">
-                  <img src="img/health/suclpting.png" alt="" class="img-responsive round">
+                  <img src="img/health/cancer.png" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark text-bold">Cancer support</figcaption>
               </a>
@@ -126,9 +126,9 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="#/healthmanagementdetail">
+              <a href="#/marathon">
                 <div class="category-imghold">
-                  <img src="img/health/cancer.png" alt="" class="img-responsive round">
+                  <img src="img/health/marathon.png" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark text-bold">Marathon / Sports Nutrition</figcaption>
               </a>
