--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -1,6 +1,6 @@
 <section>
   <div class="selfcare-image">
-    <img src="img/apple.jpg" alt="">
+    <img src="img/banners/success-stories.jpg" alt="">
     <h2 class="text-uppercase get-center white font-semibold">Success Stories</h2>
   </div>
 
@@ -75,6 +75,9 @@
                         <!-- <iframe width="100%" height="300" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe> -->
                         <a class="various fancybox.iframe" fancybox href="{{view.link}}">
                           <img ng-src="{{view.image}}" alt="" class="img-responsive" />
+                          <div class="circle">
+                            <img src="img/play.png" alt="" class="img-responsive" />
+                          </div>
                         </a>
                       </div>
 
@@ -109,6 +112,9 @@
                         <!-- <iframe width="100%" height="300" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe> -->
                         <a class="various fancybox.iframe" fancybox href="{{view.link}}">
                           <img ng-src="{{view.image}}" alt="" class="img-responsive" />
+                          <div class="circle">
+                            <img src="img/play.png" alt="" class="img-responsive" />
+                          </div>
                         </a>
                       </div>
 
@@ -133,6 +139,9 @@
                         <!-- <iframe width="100%" height="300" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe> -->
                         <a class="various fancybox.iframe" fancybox href="{{view.link}}">
                           <img ng-src="{{view.image}}" alt="" class="img-responsive" />
+                          <div class="circle">
+                            <img src="img/play.png" alt="" class="img-responsive" />
+                          </div>
                         </a>
                       </div>
                     </div>
