--- a/views/header.html
+++ b/views/header.html
@@ -34,11 +34,11 @@
                 <div class="social-links text-right">
                   <ul>
                     <li><a href="#/cart"><i class="fa fa-shopping-cart"></i></a></li>
-                    <li><a href="https://www.facebook.com/"><i class="fa fa-facebook "></i></a></li>
-                    <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://instagram.com/"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="https://www.youtube.com/"><i class="fa fa-youtube"></i></a></li>
-                    <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest-p"></i></a></li>
+                    <li><a href="https://www.facebook.com/selfcarebysuman" target="_blank"><i class="fa fa-facebook "></i></a></li>
+                    <li><a href="https://twitter.com/selfcarebysuman" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://www.instagram.com/selfcarebysuman" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCVqKgmC6eaMrgPyXoOcOz2A" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                    <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest-p" target="_blank"></i></a></li>
                   </ul>
                 </div>
               </div>
