--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -54,7 +54,7 @@
                   <span class="text-uppercase">{{product.name}}</span> |
                   <span><i class="fa fa-inr"></i> {{product.price}}</span>
                 </p>
-                <a class="btn btn-primary text-uppercase" ng-click="cardAdd(product.id)">Add to cart</a>
+                <a class="btn btn-primary text-uppercase" ng-click="cartAdd(product.id)">Add to cart</a>
               </div>
             </div>
           </div>
