small additions for tabs

--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="checkout-tab">
       <uib-tabset>
-        <uib-tab active="tabs[0].active" disabled="tabs[0].disabled">
+        <uib-tab active="tabs[0].active" disable="tabs[0].disabled">
           <uib-tab-heading>
             Email login
             <span class="greater"> &gt; </span>
@@ -55,7 +55,7 @@
             </div>
           </div>
         </uib-tab>
-        <uib-tab >
+        <uib-tab active="tabs[1].active" disable="tabs[1].disabled">
           <uib-tab-heading>
             shipping address
             <span class="greater"> &gt; </span>
@@ -99,7 +99,7 @@
             </div>
           </div>
         </uib-tab>
-        <uib-tab>
+        <uib-tab active="tabs[2].active" disable="tabs[2].disabled">
           <uib-tab-heading>
             order-summary
             <span class="greater"> &gt; </span>
@@ -195,7 +195,7 @@
             </div>
           </div>
         </uib-tab>
-        <uib-tab>
+        <uib-tab active="tabs[3].active" disable="tabs[3].disabled">
           <uib-tab-heading>
             payment options
           </uib-tab-heading>
