--- a/views/content/cart.html
+++ b/views/content/cart.html
@@ -10,7 +10,7 @@
     <div class="container">
       <h3 class="text-uppercase brand-brown-dark letter-space font-semibold">Items you would like to purchase</h3>
       <div class="text-center" ng-if="allcart.length<=0">
-        No items in cart
+        Your cart is empty
       </div>
       <div class="cart-table">
         <table class="table" ng-if="allcart.length > 0">
