--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -26,12 +26,12 @@
           <div class="checkout-main">
             <div class="row">
               <div class="col-md-4 col-sm-6">
-                <form action="">
+                <form action="" name="loginForm">
                   <div class="form-group">
-                    <input type="email" class="form-control" placeholder="Email">
+                    <input type="email" name="email" ng-model="login.email" required class="form-control" placeholder="Email">
                   </div>
                   <div class="form-group" ng-show="guestshow">
-                    <input type="password" class="form-control" placeholder="Password">
+                    <input type="password" name="password" ng-model="login.password" required class="form-control" placeholder="Password">
                   </div>
                   <div class="form-group">
                       <div class="radio">
@@ -49,7 +49,7 @@
                     </label>
                   </div>
                   </div>
-                  <a href="" class="btn btn-primary text-uppercase">continue</a>
+                  <a href="" class="btn btn-primary text-uppercase" ng-click="proceedToShipping(login,guestshow,loginForm)">continue</a>
                 </form>
               </div>
             </div>
